--- a/BugTrackerUI/Shared/LeftNav.razor
+++ b/BugTrackerUI/Shared/LeftNav.razor
@@ -1,8 +1,4 @@
 ﻿<ul>
-    <li>
-        <NavLink href="/Home" Match="NavLinkMatch.All">Home</NavLink>
-    </li>
-    <li>
-        <NavLink href="/new-bug">New Bug</NavLink>
-    </li>
+    <li><NavLink href="" Match="NavLinkMatch.All">Home</NavLink></li>
+    <li><NavLink href="/new-bug">New Bug</NavLink></li>
 </ul>
